# Bataille-Navale-Projet-Informatique-2

./: .Makefile  .clang-format  .gitignore  .mailmap  CMakeLists.txt  CmakeLists.txt  GameClient.cpp  GameClient.hpp  GameServer.cpp  GameSession.hpp  GameState.hpp  Makefile  README.html  README.md  README.rst  SessionManager.cpp  SessionManager.hpp  build.bat  clear.bat  dependencies.sh  gameclientlog.txt  install_dep  output.json  output.txt  script.sh  server.cpp  test_ship  users.db
doc/: API.md  documentation.md  endpoints.md
doc/doc_db/: class_dia.uxf  schema_relationnel.uxf
doc/srd/: README.txt  besoins_sys.tex  besoins_user.tex  design_fonctionnement_sys.tex  fonctionnel.tex  introduction.tex  master.blg  master.tex
doc/srd/besoins_sys/: connexion.tex  match_making.tex  partie.tex
doc/srd/besoins_user/: besoin_nf.tex  connexion.tex  menu_principal.tex  partie.tex
doc/srd/design_fonctionnement_sys/: design_sys.tex  fonctionnement_sys.tex
doc/srd/introduction/: but.tex  glossaire.tex  historique.tex
include/Client/: controller.hh  display.hh  driver.hh  gui_LoginWindow.hh  gui_driver.hh  local_board.hh  local_board_commander.hh  local_board_review.hh  observer.hh  view.hh
include/Client/Controllers/: chat_controller.hh  friend_list_controller.hh  game_controller.hh  game_player_controller.hh  game_setting_controller.hh  lobby_controller.hh  login_controller.hh  main_menu_controller.hh  profile_controller.hh  register_controller.hh  review_controller.hh  review_game_controller.hh
include/Client/Display/: console.hh  gui.hh
include/Client/Network/: game_client.hh
include/Client/Views/: chat_view.hh  friend_list_view.hh  game_player_view.hh  game_setting_view.hh  game_view.hh  lobby_view.hh  login_view.hh  main_menu_view.hh  profile_view.hh  register_view.hh  review_view.hh
include/Common/: aerial_strike_iterator.hh  board_coordinates.hh  cell.hh  cell_type.hh  message.hh  notification.hh  player.hh  ship.hh  ship_classic.hh  ship_commander.hh  ship_coordinates.hh  ship_types.hh
include/Server/Database/: database.hh  queries.hh  query_result.hh  security.hh
include/Server/Game/: account_server.hh  aerial_strike_iterator.hh  big_torpedo_iterator.hh  board.hh  chat_server.hh  classic_timer.hh  game.hh  game_launcher.hh  game_phase.hh  game_server.hh  game_state.hh  game_timer.hh  game_view.hh  match_maker.hh  old_ship.hh  pendulum_timer.hh  piercing_torpedo_iterator.hh  player.hh  player_role.hh  server.hh  ship.hh  timer.hh
include/Server/Network/: game_server.hh  game_session.hh  session_manager.hh  token_handler.hh
include/client/: driver.hh  local_board.hh
include/client/Controllers/: chat_controller.hh  friend_list_controller.hh  login_controller.hh  main_menu_controller.hh  profile_controller.hh
include/client/Display/: gui.hh
include/client/Views/: chat_view.hh  friend_list_view.hh  game_view.hh  register_view.hh
include/client/network/: GameClient.hpp  game_client.hh
include/common/: message.cc  message.hh  ship.hh
include/server/database/: database.hh  queries.hh  query_result.hh  security.hh
include/server/game/: account_server.hh  board.hh  board_control.hh  board_display.hh  board_view.hh  game.hh  game_server.hh  game_state.hh  match_maker.hh  server.hh
include/server/network/: GameServer.hpp  TokenHandler.hpp  game_server.hh  game_session.hh  (+2 more)
lib/: download_deps.sh  extract_deps.sh  libqt6core6_6.2.4+dfsg-2ubuntu1.1_amd64.deb  libqt6dbus6_6.2.4+dfsg-2ubuntu1.1_amd64.deb  libqt6gui6_6.2.4+dfsg-2ubuntu1.1_amd64.deb  libqt6widgets6_6.2.4+dfsg-2ubuntu1.1_amd64.deb  qmake6-bin_6.2.4+dfsg-2ubuntu1.1_amd64.deb  qmake6_6.2.4+dfsg-2ubuntu1.1_amd64.deb  qt6-base-dev-tools_6.2.4+dfsg-2ubuntu1.1_amd64.deb  qt6-base-dev_6.2.4+dfsg-2ubuntu1.1_amd64.deb  script.sh  script2.sh  setup_libs_unif.sh
src-squelette/client/: controller.hh  display.hh  driver.cc  local_board.cc  local_board.hh  main.cc  observer.hh  view.hh
src-squelette/common/: board_coordinates.hh  cell.hh  cell_type.hh  message.hh  not_implemented_error.hh  ship_coordinates.hh  ship_types.hh
src-squelette/server/: account_server.hh  board.hh  board_view.hh  chat_server.hh  connected_user.hh  game_launcher.hh  game_server.cc  game_server.hh  match_maker.hh  pending_match.hh  player.hh  server.hh  ship.hh  subject.hh  timer.cc  timer.hh
src/Client/: driver.cc  gui_driver.cc  local_board.cc  local_board_commander.cc  local_board_review.cc  main.cc
src/Common/: board_coordinates.cc  highlight_button.cc  message.cc  player.cc  ship.cc  ship_classic.cc  ship_commander.cc  ship_coordinates.cc
src/Server/: server.cc
src/client/: board.hh  board_control.cc  board_control.hh  board_coordinates.hh  board_display.hh  board_view.hh  cell.hh  client.cpp  console_board_display.cc  console_board_display.hh  console_board_gen_display.cc  console_board_gen_display.hh  controller.hh  driver.cc  driver.hh  dummy_board.hh  game_driver.cc  game_driver.hh  local_board.cc  main.cc  not_implemented_error.hh  ship.hh  ship_coordinates.cc  ship_coordinates.hh  turn.hh  view.hh
src/common/: board_coordinates.cc  board_coordinates.hh  cell_type.hh  message.cc  ship_commander.cc  ship_coordinates.cc  ship_coordinates.hh  ship_types.hh  turn.hh
src/server/: board.hh  player.hh  server.cc  subject.hh
src/test_client/: client.cc
src_remise1/: board.hh  board_control.cc  board_control.hh  board_view.hh  cell.hh  console_board_display.cc  console_board_display.hh  dummy_board.hh  game_driver.cc  ship.hh  ship_coordinates.cc  ship_coordinates.hh  ship_types.hh
src_remise1/client/: board.hh  board_view.hh  console_board_display.cc  dummy_board.hh  main.cc  ship_types.hh
test/: ChatConsole.cc  ChatConsole.h  ChatController.cc  ChatView.h  clear.hpp  create_user.sh  game_parameter.cpp  menu.hh  messages.hh  random_str.sh  test_chat.cc  test_client.cc  test_commander.cc  test_database.cpp  test_game.cc  test_local_board.cc  test_menu.cpp  test_player.cc  test_server.sh  test_ship.cc  test_special_ability.cc  test_tokens.cc
testing/: ChatController.h  ChatView.cc  Makefile  menu.cpp
(+210 files in other folders)
